--- a/cohorts/2023/04_evaluation/homework/evaluation.ipynb
+++ b/cohorts/2023/04_evaluation/homework/evaluation.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2023-10-09 10:33:15--  https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-02-car-price/data.csv\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 2606:50c0:8003::154, 2606:50c0:8000::154, 2606:50c0:8001::154, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|2606:50c0:8003::154|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1475504 (1,4M) [text/plain]\n",
+      "Saving to: ‘data.csv.1’\n",
+      "\n",
+      "data.csv.1          100%[===================>]   1,41M  --.-KB/s    in 0,1s    \n",
+      "\n",
+      "2023-10-09 10:33:15 (13,5 MB/s) - ‘data.csv.1’ saved [1475504/1475504]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Downloading the data: Car price\n",
     "!wget https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-02-car-price/data.csv"
@@ -12,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +210,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +277,7 @@
        "(0.5999664260533826, 0.2000167869733087, 0.2000167869733087)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +374,7 @@
        "5814              0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +526,7 @@
        "5814         AUTOMATIC        Large         Sedan           30        18  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,16 +537,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_855058/1334777096.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/1334777096.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  train_dict = train_df[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/1334777096.py:5: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/1334777096.py:5: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  val_dict = val_df[cat_cols + num_cols].to_dict(orient='records')\n"
      ]
     }
@@ -549,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +585,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "y_pred = model.predict_proba(X_val)[:, 1]\n",
-    "above_avg = y_pred >= 0.5\n",
+    "above_avg = y_pred > 0.5\n",
     "\n",
     "val_auc = round(roc_auc_score(y_val, above_avg), 3)\n",
     "print(f\"val_auc: {val_auc}\")"
@@ -575,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,16 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa88d2f5670>"
+       "<matplotlib.legend.Legend at 0x7faf9c076760>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -643,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +689,7 @@
        "48"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +719,7 @@
        "Name: 48, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,30 +758,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_855058/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df_train[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df_train[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df_train[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df_train[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df[cat_cols + num_cols].to_dict(orient='records')\n",
-      "/tmp/ipykernel_855058/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df_train[cat_cols + num_cols].to_dict(orient='records')\n"
      ]
     },
@@ -778,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_855058/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "/tmp/ipykernel_860639/2978757284.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  dicts = df[cat_cols + num_cols].to_dict(orient='records')\n"
      ]
     }
@@ -810,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
